--- a/Math_509_Project.ipynb
+++ b/Math_509_Project.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOroz/AYF8z2+KCjCoGV/FD",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/yogivirat/MATH-509-FINAL-PROJECT/blob/master/Math_509_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,15 +12,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "dS9wQq2aEkt4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HDdJ67IVEkSp"
+      },
       "source": [
         "# MATH 509 Final Project\n",
         "\n",
@@ -64,10 +51,7 @@
         "the RS in generating relevant recommendations for users.\n",
         "By achieving these goals, our project aims to simplify the process of discovering enjoyable\n",
         "content for users while making a valuable contribution to the field of Recommender Systems"
-      ],
-      "metadata": {
-        "id": "HDdJ67IVEkSp"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -76,7 +60,114 @@
         "id": "T7Z9YMLyD44Q"
       },
       "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "import math\n",
+        "from matplotlib import rc\n",
+        "from google.colab import drive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%matplotlib inline\n",
+        "\n",
+        "sns.set(style='whitegrid', palette='muted', font_scale=1.3)\n",
+        "\n",
+        "RANDOM_SEED = 7007\n",
+        "\n",
+        "np.random.seed(RANDOM_SEED)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "drive.mount(\"/content/drive\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plays = pd.read_csv('/content/drive/My Drive/final_dataSet/user_artists.dat', sep='\\t')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "artists = pd.read_csv('/content/drive/My Drive/final_dataSet/artists.dat', sep='\\t', usecols=['id','name'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ap = pd.merge(\n",
+        "  artists, plays, \n",
+        "  how=\"inner\",\n",
+        "  left_on=\"id\",\n",
+        "  right_on=\"artistID\"\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ap = ap.rename(columns={\"weight\": \"playCount\"})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ap.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOroz/AYF8z2+KCjCoGV/FD",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
