--- a/Math_509_project.ipynb
+++ b/Math_509_project.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/yogivirat/MATH-509-FINAL-PROJECT/blob/master/Math_509_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,15 +12,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "dS9wQq2aEkt4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HDdJ67IVEkSp"
+      },
       "source": [
         "# MATH 509 Final Project\n",
         "\n",
@@ -63,23 +51,20 @@
         "the RS in generating relevant recommendations for users.\n",
         "By achieving these goals, our project aims to simplify the process of discovering enjoyable\n",
         "content for users while making a valuable contribution to the field of Recommender Systems"
-      ],
-      "metadata": {
-        "id": "HDdJ67IVEkSp"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Data Set Link: https://grouplens.org/datasets/hetrec-2011/ || https://drive.google.com/drive/folders/1YPYlOG7xbTqQ8jy5IetnL7beO64hKhvG?usp=sharing\n"
-      ],
       "metadata": {
         "id": "Gdm4MPxjB7_2"
-      }
+      },
+      "source": [
+        "Data Set Link: https://grouplens.org/datasets/hetrec-2011/ || https://drive.google.com/drive/folders/1YPYlOG7xbTqQ8jy5IetnL7beO64hKhvG?usp=sharing\n"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "T7Z9YMLyD44Q"
       },
@@ -90,34 +75,56 @@
         "from tensorflow import keras\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
+        "from pylab import rcParams\n",
+        "import string\n",
+        "import re\n",
         "import matplotlib.pyplot as plt\n",
         "import math\n",
         "from matplotlib import rc\n",
-        "from google.colab import drive"
+        "from google.colab import drive\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from collections import Counter, defaultdict\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import matplotlib.ticker as ticker\n",
+        "from math import sqrt\n",
+        "\n",
+        "\n",
+        "from sklearn.metrics import mean_squared_error"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import matplotlib.ticker as ticker"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Yze2aoy_DjM9"
+      },
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import mean_squared_error\n",
+        "\n",
         "%matplotlib inline\n",
         "\n",
         "sns.set(style='whitegrid', palette='muted', font_scale=1.3)\n",
         "\n",
-        "RANDOM_SEED = 7007\n",
+        "rcParams['figure.figsize'] = 14, 8\n",
         "\n",
-        "np.random.seed(RANDOM_SEED)"
-      ],
-      "metadata": {
-        "id": "Yze2aoy_DjM9"
-      },
-      "execution_count": 7,
-      "outputs": []
+        "RANDOM_SEED = 42\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "drive.mount(\"/content/drive\")"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,41 +132,48 @@
         "id": "IWZekm_mC42N",
         "outputId": "fdf13c17-f1ce-4ecd-d1b4-a79c2a4965e3"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "drive.mount(\"/content/drive\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "plays = pd.read_csv('/content/drive/My Drive/final_dataSet/user_artists.dat', sep='\\t')\n"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "QVxK6RAHC_92"
       },
-      "execution_count": 9,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "plays = pd.read_csv('/content/drive/My Drive/final_dataSet/user_artists.dat', sep='\\t')\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "artists = pd.read_csv('/content/drive/My Drive/final_dataSet/artists.dat', sep='\\t', usecols=['id','name'])"
-      ],
+      "execution_count": 10,
       "metadata": {
         "id": "1o17bQuYDVQ0"
       },
-      "execution_count": 10,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "artists = pd.read_csv('/content/drive/My Drive/final_dataSet/artists.dat', sep='\\t', usecols=['id','name'])"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "fxQLftssEC6a"
+      },
+      "outputs": [],
       "source": [
         "ap = pd.merge(\n",
         "  artists, plays,\n",
@@ -167,29 +181,22 @@
         "  left_on=\"id\",\n",
         "  right_on=\"artistID\"\n",
         ")"
-      ],
-      "metadata": {
-        "id": "fxQLftssEC6a"
-      },
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ap = ap.rename(columns={\"weight\": \"playCount\"})"
-      ],
+      "execution_count": 12,
       "metadata": {
         "id": "VS0AB62hEFde"
       },
-      "execution_count": 12,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "ap = ap.rename(columns={\"weight\": \"playCount\"})"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ap.head()"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -198,19 +205,14 @@
         "id": "lZ1vGmaiEIU7",
         "outputId": "af26b5af-66c9-4998-b4a8-447d1b2631b2"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   id             name  userID  artistID  playCount\n",
-              "0   1     MALICE MIZER      34         1        212\n",
-              "1   1     MALICE MIZER     274         1        483\n",
-              "2   1     MALICE MIZER     785         1         76\n",
-              "3   2  Diary of Dreams     135         2       1021\n",
-              "4   2  Diary of Dreams     257         2        152"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"ap\",\n  \"rows\": 92834,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 4383,\n        \"min\": 1,\n        \"max\": 18745,\n        \"num_unique_values\": 17632,\n        \"samples\": [\n          6100,\n          5587,\n          11171\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"name\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 17632,\n        \"samples\": [\n          \"DJ Ear\",\n          \"www.baixarsertanejo.com\",\n          \"Roma Kenga\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"userID\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 610,\n        \"min\": 2,\n        \"max\": 2100,\n        \"num_unique_values\": 1892,\n        \"samples\": [\n          2003,\n          1198,\n          563\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"artistID\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 4383,\n        \"min\": 1,\n        \"max\": 18745,\n        \"num_unique_values\": 17632,\n        \"samples\": [\n          6100,\n          5587,\n          11171\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"playCount\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3751,\n        \"min\": 1,\n        \"max\": 352698,\n        \"num_unique_values\": 5436,\n        \"samples\": [\n          60877,\n          6219,\n          2336\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "ap"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-11b063b9-23c7-4c6b-9a62-4bc00b5107af\" class=\"colab-df-container\">\n",
@@ -492,25 +494,211 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "ap",
-              "summary": "{\n  \"name\": \"ap\",\n  \"rows\": 92834,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 4383,\n        \"min\": 1,\n        \"max\": 18745,\n        \"num_unique_values\": 17632,\n        \"samples\": [\n          6100,\n          5587,\n          11171\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"name\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 17632,\n        \"samples\": [\n          \"DJ Ear\",\n          \"www.baixarsertanejo.com\",\n          \"Roma Kenga\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"userID\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 610,\n        \"min\": 2,\n        \"max\": 2100,\n        \"num_unique_values\": 1892,\n        \"samples\": [\n          2003,\n          1198,\n          563\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"artistID\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 4383,\n        \"min\": 1,\n        \"max\": 18745,\n        \"num_unique_values\": 17632,\n        \"samples\": [\n          6100,\n          5587,\n          11171\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"playCount\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3751,\n        \"min\": 1,\n        \"max\": 352698,\n        \"num_unique_values\": 5436,\n        \"samples\": [\n          60877,\n          6219,\n          2336\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "   id             name  userID  artistID  playCount\n",
+              "0   1     MALICE MIZER      34         1        212\n",
+              "1   1     MALICE MIZER     274         1        483\n",
+              "2   1     MALICE MIZER     785         1         76\n",
+              "3   2  Diary of Dreams     135         2       1021\n",
+              "4   2  Diary of Dreams     257         2        152"
+            ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "ap.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## EXPLORATION"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ZOeZJFa-EJ50"
       },
+      "outputs": [],
+      "source": [
+        "artist_rank = ap.groupby(['name']) \\\n",
+        "  .agg({'userID' : 'count', 'playCount' : 'sum'}) \\\n",
+        "  .rename(columns={\"userID\" : 'totalUniqueUsers', \"playCount\" : \"totalArtistPlays\"}) \\\n",
+        "  .sort_values(['totalArtistPlays'], ascending=False)\n",
+        "\n",
+        "artist_rank['avgUserPlays'] = artist_rank['totalArtistPlays'] / artist_rank['totalUniqueUsers']"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ap = ap.join(artist_rank, on=\"name\", how=\"inner\") \\\n",
+        "  .sort_values(['playCount'], ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ap.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def bar_chart_int(x, y, x_label, y_label, title, caption, total_val):\n",
+        "    fig, ax = plt.subplots()\n",
+        "    fig.set_size_inches(16, 5)\n",
+        "    ax = sns.barplot(x=x[:20], y=y[:20], palette='Blues_r')  # Adjusted to use keyword arguments\n",
+        "    ax.set_xlabel(x_label)\n",
+        "    ax.set_ylabel(y_label)\n",
+        "    ax.set_title(title)\n",
+        "    ax.get_yaxis().set_major_formatter(ticker.FuncFormatter(lambda x, p: '{:,}'.format(int(x))))\n",
+        "\n",
+        "    # our bar label placement\n",
+        "    for p in ax.patches:\n",
+        "        height = p.get_height()\n",
+        "        pct = 100*(height/total_val)\n",
+        "        ax.text(p.get_x()+p.get_width()/2.,\n",
+        "                height + 3,\n",
+        "                '{:1.1f}%'.format(pct),\n",
+        "                ha=\"center\",verticalalignment='bottom',color='black', fontsize=12) \n",
+        "\n",
+        "    # our caption statement\n",
+        "    ax.text(19, max(y[:20])*0.95, caption,horizontalalignment='right')\n",
+        "\n",
+        "    plt.xticks(rotation=90)\n",
+        "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "artist_rank.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ap.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ax = ap.playCount.value_counts().hist(bins=100)\n",
+        "ax.set_xlim((0, 200))\n",
+        "ax.set_title(\"Artist played count\")\n",
+        "ax.set_xlabel(\"user count\")\n",
+        "ax.set_ylabel(\"played times\");"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "c2 = artist_rank.sort_values(['totalUniqueUsers'],ascending=False)\n",
+        "x = c2.index\n",
+        "y = c2.totalUniqueUsers\n",
+        "x_label = 'Artist Name'\n",
+        "y_label = 'Unique Users Played'\n",
+        "title = 'Unique Users per Artist'\n",
+        "caption = 'Percentage of total unique users'\n",
+        "total_val = ap.userID.nunique()\n",
+        "\n",
+        "bar_chart_int(x,y,x_label,y_label,title,caption,total_val)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "c1 = artist_rank\n",
+        "x = c1.index\n",
+        "y = c1.totalArtistPlays\n",
+        "x_label = 'Artist Name'\n",
+        "y_label = 'Total Artist Plays'\n",
+        "title = 'Total Plays by Artist'\n",
+        "caption = 'Percentage of total plays'\n",
+        "total_val = c1.totalArtistPlays.sum()\n",
+        "\n",
+        "bar_chart_int(x,y,x_label,y_label,title,caption,total_val)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "top_artists = artist_rank.sort_values(['totalArtistPlays'], ascending=False).index[:12]\n",
+        "\n",
+        "x = artist_rank.totalUniqueUsers\n",
+        "y = artist_rank.totalArtistPlays\n",
+        "labels = artist_rank.index\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(15,10))\n",
+        "sns.regplot(x=x, y=y, ax=ax)  # Pass x and y as keyword arguments\n",
+        "ax.set_title('Artist Popularity: Play Count vs Unique Users')\n",
+        "ax.yaxis.set_major_formatter(ticker.FuncFormatter(lambda y, _: '{:,.0f}'.format(y)))\n",
+        "ax.set_xlabel('Total Unique Users')\n",
+        "ax.set_ylabel('Total Artist Plays')\n",
+        "\n",
+        "for i, t in enumerate(labels):\n",
+        "    if t in top_artists:\n",
+        "        ax.annotate(t, (x[i], y[i]))\n",
+        "\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
