Recommender model with initial assumption

--- a/Math_509_project.ipynb
+++ b/Math_509_project.ipynb
@@ -683,6 +683,274 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
+      "source": [
+        "pc = ap.playCount\n",
+        "play_count_scaled = (pc - pc.min()) / (pc.max() - pc.min())\n",
+        "\n",
+        "ap = ap.assign(playCountScaled=play_count_scaled)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ratings_df = ap.pivot(\n",
+        "    index='userID', \n",
+        "    columns='artistID', \n",
+        "    values='playCountScaled'\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ratings = ratings_df.fillna(0).values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sparsity = float(len(ratings.nonzero()[0]))\n",
+        "sparsity /= (ratings.shape[0] * ratings.shape[1])\n",
+        "sparsity *= 100\n",
+        "print('{:.2f}%'.format(sparsity))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "MIN_USER_RATINGS = 35\n",
+        "DELETE_RATING_COUNT = 15\n",
+        "\n",
+        "def train_test_split(ratings):\n",
+        "    \n",
+        "    validation = np.zeros(ratings.shape)\n",
+        "    train = ratings.copy()\n",
+        "    \n",
+        "    for user in np.arange(ratings.shape[0]):\n",
+        "        if len(ratings[user,:].nonzero()[0]) >= MIN_USER_RATINGS:\n",
+        "            val_ratings = np.random.choice(\n",
+        "                ratings[user, :].nonzero()[0], \n",
+        "                size=DELETE_RATING_COUNT,\n",
+        "                replace=False\n",
+        "            )\n",
+        "            train[user, val_ratings] = 0\n",
+        "            validation[user, val_ratings] = ratings[user, val_ratings]\n",
+        "    return train, validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train, val = train_test_split(ratings)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def rmse(prediction, ground_truth):\n",
+        "    prediction = prediction[ground_truth.nonzero()].flatten() \n",
+        "    ground_truth = ground_truth[ground_truth.nonzero()].flatten()\n",
+        "    return sqrt(mean_squared_error(prediction, ground_truth))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class Recommender:\n",
+        "  \n",
+        "  def __init__(self, n_epochs=200, n_latent_features=3, lmbda=0.1, learning_rate=0.001):\n",
+        "    self.n_epochs = n_epochs\n",
+        "    self.n_latent_features = n_latent_features\n",
+        "    self.lmbda = lmbda\n",
+        "    self.learning_rate = learning_rate\n",
+        "  \n",
+        "  def predictions(self, P, Q):\n",
+        "    return np.dot(P.T, Q)\n",
+        "  \n",
+        "  def fit(self, X_train, X_val):\n",
+        "    m, n = X_train.shape\n",
+        "\n",
+        "    self.P = 3 * np.random.rand(self.n_latent_features, m)\n",
+        "    self.Q = 3 * np.random.rand(self.n_latent_features, n)\n",
+        "    \n",
+        "    self.train_error = []\n",
+        "    self.val_error = []\n",
+        "\n",
+        "    users, items = X_train.nonzero()\n",
+        "    \n",
+        "    for epoch in range(self.n_epochs):\n",
+        "        for u, i in zip(users, items):\n",
+        "            error = X_train[u, i] - self.predictions(self.P[:,u], self.Q[:,i])\n",
+        "            self.P[:, u] += self.learning_rate * (error * self.Q[:, i] - self.lmbda * self.P[:, u])\n",
+        "            self.Q[:, i] += self.learning_rate * (error * self.P[:, u] - self.lmbda * self.Q[:, i])\n",
+        "\n",
+        "        train_rmse = rmse(self.predictions(self.P, self.Q), X_train)\n",
+        "        val_rmse = rmse(self.predictions(self.P, self.Q), X_val)\n",
+        "        self.train_error.append(train_rmse)\n",
+        "        self.val_error.append(val_rmse)\n",
+        "        \n",
+        "    return self\n",
+        "  \n",
+        "  def predict(self, X_train, user_index):\n",
+        "    y_hat = self.predictions(self.P, self.Q)\n",
+        "    predictions_index = np.where(X_train[user_index, :] == 0)[0]\n",
+        "    return y_hat[user_index, predictions_index].flatten()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install git+https://github.com/BirkhoffG/causalgraphicalmodels.git"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## INITIAL ASSUMPTION\n",
+        "\n",
+        "U → R: User preferences influence user-item interactions. Users are more likely to interact with items (e.g., listen to or rate them) if they align with their preferences.\n",
+        "\n",
+        "I → R: Item characteristics influence user-item interactions. Items with certain characteristics (e.g., popular genres) are more likely to be interacted with by users.\n",
+        "\n",
+        "U ← I: User preferences may also influence item characteristics. For example, if many users prefer a certain genre, artists producing that genre may become more popular."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import causalgraphicalmodels as cgm\n",
+        "from causalgraphicalmodels import CausalGraphicalModel\n",
+        "\n",
+        "# Define the causal relationships in the DAG\n",
+        "dag = CausalGraphicalModel(\n",
+        "    nodes=[\"U\", \"I\", \"R\"],\n",
+        "    edges=[\n",
+        "        (\"U\", \"R\"),  # User preferences influence user-item interactions\n",
+        "        (\"I\", \"R\"),  # Item characteristics influence user-item interactions\n",
+        "        (\"U\", \"I\")   # User preferences influence item characteristics\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "# Plot the DAG\n",
+        "dag.draw()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "recommender = Recommender().fit(train, val)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.plot(range(recommender.n_epochs), recommender.train_error, marker='o', label='Training Data');\n",
+        "plt.plot(range(recommender.n_epochs), recommender.val_error, marker='v', label='Validation Data');\n",
+        "plt.xlabel('Number of Epochs');\n",
+        "plt.ylabel('RMSE');\n",
+        "plt.legend()\n",
+        "plt.grid()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "user_id = 1236\n",
+        "user_index = ratings_df.index.get_loc(user_id)\n",
+        "predictions_index = np.where(train[user_index, :] == 0)[0]\n",
+        "\n",
+        "rating_predictions = recommender.predict(train, user_index)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def create_artist_ratings(artists_df, artists_index, ratings, n=10):\n",
+        "  artist_ids = ratings_df.columns[artists_index]\n",
+        "  artist_ratings = pd.DataFrame(data=dict(artistId=artist_ids, rating=ratings))\n",
+        "  top_n_artists = artist_ratings.sort_values(\"rating\", ascending=False).head(n)\n",
+        "  \n",
+        "  artist_recommendations = artists_df[artists_df.id.isin(top_n_artists.artistId)].reset_index(drop=True)\n",
+        "  artist_recommendations['rating'] = pd.Series(top_n_artists.rating.values)\n",
+        "  return artist_recommendations.sort_values(\"rating\", ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "existing_ratings_index = np.where(train[user_index, :] > 0)[0]\n",
+        "existing_ratings = train[user_index, existing_ratings_index]\n",
+        "\n",
+        "create_artist_ratings(artists, existing_ratings_index, existing_ratings)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "create_artist_ratings(artists, predictions_index, rating_predictions)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": []
     }
   ],
