Kalam filter model changes

--- a/Math_509_project.ipynb
+++ b/Math_509_project.ipynb
@@ -947,6 +947,275 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## KALMAN FILTERING"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Sample 1% of the dataset\n",
+        "sampled_ap = ap.sample(frac=0.5, random_state=42)  # Adjust the fraction as needed\n",
+        "\n",
+        "# Check the shape of the sampled dataset\n",
+        "print(\"Shape of sampled dataset:\", sampled_ap.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sampled_ap.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Assign the normalized play counts to a new column\n",
+        "sampled_ap['playCountScaled'] = play_count_scaled\n",
+        "\n",
+        "# Pivot the dataset\n",
+        "ratings_df = sampled_ap.pivot(index='userID', columns='artistID', values='playCountScaled').fillna(0)\n",
+        "\n",
+        "# Convert ratings dataframe to numpy array\n",
+        "ratings = ratings_df.values\n",
+        "\n",
+        "# Calculate sparsity\n",
+        "sparsity = float(len(ratings.nonzero()[0])) / (ratings.shape[0] * ratings.shape[1]) * 100\n",
+        "print(\"Sparsity of the sampled dataset: {:.2f}%\".format(sparsity))\n",
+        "\n",
+        "# Define constants for train-test split\n",
+        "MIN_USER_RATINGS = 35\n",
+        "DELETE_RATING_COUNT = 15\n",
+        "\n",
+        "# Function to perform train-test split\n",
+        "def train_test_split(ratings):\n",
+        "    validation = np.zeros(ratings.shape)\n",
+        "    train = ratings.copy()\n",
+        "\n",
+        "    for user in np.arange(ratings.shape[0]):\n",
+        "        if len(ratings[user,:].nonzero()[0]) >= MIN_USER_RATINGS:\n",
+        "            val_ratings = np.random.choice(\n",
+        "                ratings[user, :].nonzero()[0], \n",
+        "                size=DELETE_RATING_COUNT,\n",
+        "                replace=False\n",
+        "            )\n",
+        "            train[user, val_ratings] = 0\n",
+        "            validation[user, val_ratings] = ratings[user, val_ratings]\n",
+        "    return train, validation\n",
+        "\n",
+        "# Perform train-test split\n",
+        "train, val = train_test_split(ratings)\n",
+        "\n",
+        "# Display the dimensions of train and validation sets\n",
+        "print(\"Train set dimensions:\", train.shape)\n",
+        "print(\"Validation set dimensions:\", val.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class KalmanFilter:\n",
+        "    def __init__(self, alpha, beta, initial_state_mean, initial_state_covariance, transition_covariance, observation_covariance):\n",
+        "        self.alpha = alpha  # State transition coefficient\n",
+        "        self.beta = beta    # Observation coefficient\n",
+        "        \n",
+        "        # Initialize state mean and covariance\n",
+        "        self.state_mean = initial_state_mean\n",
+        "        self.state_covariance = initial_state_covariance\n",
+        "        \n",
+        "        # Covariance matrices\n",
+        "        self.transition_covariance = transition_covariance\n",
+        "        self.observation_covariance = observation_covariance\n",
+        "    \n",
+        "    def predict(self):\n",
+        "        # Predict the next state\n",
+        "        self.state_mean = self.alpha * self.state_mean\n",
+        "        self.state_covariance = self.alpha**2 * self.state_covariance + self.transition_covariance\n",
+        "        \n",
+        "    def update(self, observation):\n",
+        "        # Update the state estimate based on the new observation\n",
+        "        kalman_gain = self.state_covariance * self.beta / (self.beta**2 * self.state_covariance + self.observation_covariance)\n",
+        "        self.state_mean += kalman_gain * (observation - self.beta * self.state_mean)\n",
+        "        self.state_covariance -= kalman_gain * self.beta * self.state_covariance\n",
+        "        \n",
+        "    def filter(self, observations):\n",
+        "        filtered_states = []\n",
+        "        for observation in observations:\n",
+        "            self.predict()\n",
+        "            self.update(observation)\n",
+        "            filtered_states.append(self.state_mean)\n",
+        "        return np.array(filtered_states)\n",
+        "\n",
+        "# Define model parameters\n",
+        "alpha = 0.8\n",
+        "beta = 1.0\n",
+        "initial_state_mean = 0\n",
+        "initial_state_covariance = 1\n",
+        "transition_covariance = 0.1\n",
+        "observation_covariance = 0.5\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initialize Kalman filter\n",
+        "kf = KalmanFilter(alpha, beta, initial_state_mean, initial_state_covariance, transition_covariance, observation_covariance)\n",
+        "\n",
+        "# Prepare observations for each user\n",
+        "unique_user_ids = sampled_ap['userID'].unique()\n",
+        "filtered_states_by_user = {}\n",
+        "\n",
+        "# Run Kalman filter for each user\n",
+        "for user_id in unique_user_ids:\n",
+        "    user_play_counts = sampled_ap[sampled_ap['userID'] == user_id]['playCountScaled'].values\n",
+        "    filtered_states = kf.filter(user_play_counts)\n",
+        "    filtered_states_by_user[user_id] = filtered_states\n",
+        "\n",
+        "# Example of accessing filtered states for a specific user\n",
+        "example_user_id = unique_user_ids[0]\n",
+        "example_filtered_states = filtered_states_by_user[example_user_id]\n",
+        "print(f\"Filtered States for User {example_user_id}:\")\n",
+        "print(example_filtered_states)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class LSSM:\n",
+        "    def __init__(self, n_epochs=200, n_latent_features=3, lmbda=0.1, learning_rate=0.001):\n",
+        "        self.n_epochs = n_epochs\n",
+        "        self.n_latent_features = n_latent_features\n",
+        "        self.lmbda = lmbda\n",
+        "        self.learning_rate = learning_rate\n",
+        "\n",
+        "    def predictions(self, P, Q):\n",
+        "        return np.dot(P.T, Q)\n",
+        "\n",
+        "    def fit(self, X_train, X_val):\n",
+        "        m, n = X_train.shape\n",
+        "        self.P = 3 * np.random.rand(self.n_latent_features, m)\n",
+        "        self.Q = 3 * np.random.rand(self.n_latent_features, n)\n",
+        "        self.train_error = []\n",
+        "        self.val_error = []\n",
+        "\n",
+        "        for epoch in range(self.n_epochs):\n",
+        "            for u in range(m):\n",
+        "                for i in range(n):\n",
+        "                    if X_train[u, i] > 0:\n",
+        "                        error = X_train[u, i] - np.dot(self.P[:, u], self.Q[:, i])\n",
+        "                        self.P[:, u] += self.learning_rate * (error * self.Q[:, i] - self.lmbda * self.P[:, u])\n",
+        "                        self.Q[:, i] += self.learning_rate * (error * self.P[:, u] - self.lmbda * self.Q[:, i])\n",
+        "\n",
+        "            # Calculate training and validation errors for the epoch\n",
+        "            train_predictions = self.predictions(self.P, self.Q)\n",
+        "            train_rmse = rmse(train_predictions, X_train)\n",
+        "            val_rmse = rmse(train_predictions, X_val)\n",
+        "            self.train_error.append(train_rmse)\n",
+        "            self.val_error.append(val_rmse)\n",
+        "\n",
+        "            # Print epoch status\n",
+        "            if epoch % 10 == 0:\n",
+        "                print(f\"Epoch {epoch}: Training RMSE = {train_rmse}, Validation RMSE = {val_rmse}\")\n",
+        "\n",
+        "        return self\n",
+        "\n",
+        "    def mae(self, prediction, ground_truth):\n",
+        "        return np.mean(np.abs(prediction - ground_truth))\n",
+        "\n",
+        "    def coverage(self, top_n, user_index):\n",
+        "        user_predictions = self.predictions(self.P, self.Q)[user_index, :]\n",
+        "        top_indices = np.argpartition(-user_predictions, top_n)[:top_n]\n",
+        "        coverage = len(np.where(user_predictions[top_indices] > 0)[0]) / top_n\n",
+        "        return coverage"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Instantiate the LSSM class\n",
+        "lssm_model = LSSM(n_epochs=200, n_latent_features=3, lmbda=0.1, learning_rate=0.001)\n",
+        "\n",
+        "# Fit the LSSM model to the training data\n",
+        "lssm_model.fit(train, val)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot the epoch error rates\n",
+        "plt.plot(range(lssm_model.n_epochs), lssm_model.train_error,marker='o', label='Training RMSE')\n",
+        "plt.plot(range(lssm_model.n_epochs), lssm_model.val_error, marker='v',label='Validation RMSE')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('RMSE')\n",
+        "plt.title('Epoch Error Rates')\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Extract learned latent features\n",
+        "user_latent_features = lssm_model.P\n",
+        "item_latent_features = lssm_model.Q\n",
+        "\n",
+        "# Plot posterior distributions for user latent features\n",
+        "num_latent_features = user_latent_features.shape[0]\n",
+        "fig, axs = plt.subplots(num_latent_features, 1, figsize=(10, 5*num_latent_features))\n",
+        "fig.suptitle('Posterior Distributions of User Latent Features', fontsize=16)\n",
+        "for i in range(num_latent_features):\n",
+        "    axs[i].hist(user_latent_features[i], bins=30, color='skyblue', alpha=0.7)\n",
+        "    axs[i].set_title(f'Latent Feature {i+1}')\n",
+        "    axs[i].set_xlabel('Value')\n",
+        "    axs[i].set_ylabel('Frequency')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Plot posterior distributions for item latent features\n",
+        "num_latent_features = item_latent_features.shape[0]\n",
+        "fig, axs = plt.subplots(num_latent_features, 1, figsize=(10, 5*num_latent_features))\n",
+        "fig.suptitle('Posterior Distributions of Item Latent Features', fontsize=16)\n",
+        "for i in range(num_latent_features):\n",
+        "    axs[i].hist(item_latent_features[i], bins=30, color='lightgreen', alpha=0.7)\n",
+        "    axs[i].set_title(f'Latent Feature {i+1}')\n",
+        "    axs[i].set_xlabel('Value')\n",
+        "    axs[i].set_ylabel('Frequency')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
