comparisom b/w LSSM and CF

--- a/Math_509_project.ipynb
+++ b/Math_509_project.ipynb
@@ -1220,6 +1220,52 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# CF model RMSE values over 200 epochs\n",
+        "cf_training_rmse = [4.890360128948167, 1.2702533421384172, 0.7174904311685398, 0.5070622453084246, 0.3924680652571997, \n",
+        "                    0.3181449014575357, 0.2652105794444253, 0.22534769181282227, 0.19421065104865096, 0.16925061945615885, \n",
+        "                    0.14884739342135264, 0.13190996403077507, 0.11767160179823927, 0.10557551464961308, 0.09520672689783584, \n",
+        "                    0.0862493444402953, 0.07845861406448355, 0.07164202973962444, 0.06564619505893841, 0.06034747102743732]\n",
+        "\n",
+        "cf_validation_rmse = [4.975711230626356, 1.4333280645618143, 0.863349524878211, 0.6385653681501853, 0.5139215479802262, \n",
+        "                      0.4319578110589442, 0.37274128584059374, 0.3274384280763896, 0.2914364856692566, 0.2620365486249346, \n",
+        "                      0.23752690306874125, 0.21675653094477323, 0.19891689756955616, 0.18342062729072653, 0.16982946870117088, \n",
+        "                      0.1578092305912475, 0.1471003810245595, 0.13749819777894653, 0.128838982896398, 0.12099025894534568]\n",
+        "\n",
+        "# LSSM model RMSE values over 200 epochs\n",
+        "lssm_training_rmse = [6.366275485312182, 3.0989074724113026, 2.2561041575799727, 1.8650009341540403, 1.6357208856525307, \n",
+        "                      1.4824025899326378, 1.3710483453437667, 1.2855193240543803, 1.2171352550399153, 1.1607869805397317, \n",
+        "                      1.1132572177514872, 1.0724112948603983, 1.036772629119924, 1.0052845612309689, 0.9771692691237346, \n",
+        "                      0.9518403445665427, 0.9288465327202755, 0.9078343397602808, 0.8885224809577605, 0.87068399346432]\n",
+        "\n",
+        "lssm_validation_rmse = [6.366278091565758, 3.0989085548022093, 2.2561047834864705, 1.8650013146215385, 1.6357211254489372, \n",
+        "                        1.4824027436889653, 1.3710484429282794, 1.2855193827173095, 1.2171352853065043, 1.160786989169136, \n",
+        "                        1.1132572092882411, 1.072411272485641, 1.0367725951396047, 1.0052845173677931, 0.9771692166985678, \n",
+        "                        0.9518402846151813, 0.928846466070993, 0.9078342670868176, 0.8885224028164473, 0.8706839103206843]\n",
+        "\n",
+        "# Plotting RMSE values over epochs\n",
+        "epochs = range(0, len(cf_training_rmse) * 10, 10)  # Assuming an epoch is recorded every 10 steps\n",
+        "\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "plt.plot(epochs, cf_training_rmse, label='CF Training RMSE', color='blue')\n",
+        "plt.plot(epochs, cf_validation_rmse, label='CF Validation RMSE', color='red')\n",
+        "plt.plot(epochs, lssm_training_rmse, label='LSSM Training RMSE', color='green')\n",
+        "plt.plot(epochs, lssm_validation_rmse, label='LSSM Validation RMSE', color='orange')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('RMSE')\n",
+        "plt.title('RMSE vs Epochs for CF and LSSM Recommender Models')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": []
     }
   ],
